--- a/package.json
+++ b/package.json
@@ -12,39 +12,40 @@
   "dependencies": {
     "@coinbase/onchainkit": "latest",
     "@farcaster/frame-sdk": "^0.0.35",
-    "@upstash/redis": "^1.34.4",
-    "next": "^14.2.15",
-    "react": "^18",
-    "react-dom": "^18",
-    "@tanstack/react-query": "^5",
-    "viem": "^2.27.2",
-    "wagmi": "^2.14.11",
     "@prisma/client": "^5.5.0",
+    "@supabase/supabase-js": "^2.49.4",
+    "@tanstack/react-query": "^5",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
     "@types/uuid": "^9.0.4",
+    "@upstash/redis": "^1.34.4",
     "dayjs": "^1.11.10",
+    "next": "^14.2.15",
     "prisma": "^5.5.0",
+    "react": "^18",
+    "react-dom": "^18",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "typescript": "^5.2.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "viem": "^2.27.2",
+    "wagmi": "^2.14.11"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "prettier": "^3.5.3",
     "postcss": "^8",
+    "prettier": "^3.5.3",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "autoprefixer": "^10.4.16"
+    "typescript": "^5"
   }
 }
