--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "finger-on-button",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
@@ -21,6 +22,7 @@
     "@types/uuid": "^9.0.4",
     "@upstash/redis": "^1.34.4",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.5.0",
     "next": "^14.2.15",
     "prisma": "^5.5.0",
     "react": "^18",
