Remove contracts/lib/forge-std submodule

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prisma": "^5.5.0",
     "react": "^18",
     "react-dom": "^18",
+    "thirdweb": "^5.99.1",
     "typescript": "^5.2.2",
     "uuid": "^9.0.1",
     "viem": "^2.27.2",
